make Object.bsonsize work for regular js object SERVER-1477